made changes to structure of Image component to fix spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,6 @@ button {
   white-space: nowrap;
 }
 
-.image-view-button {
-height: 100%;
-width:100%;
-}
-
 #image-view {
   height: 100vh;
   width: 100vw;
